src/objects/Attachments__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Content Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>US2709849 - Added to capture the description details of the file attached</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERM_ServerPath__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ERM_ServerPath</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FDS_File_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FDS File Name</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interaction</label>
        <referenceTo>Interaction__c</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Attachments</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FDS_File_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>